fix(components/NavDock): allow overflow scrolling on small devices

--- a/src/components/NavDock.module.scss
+++ b/src/components/NavDock.module.scss
@@ -7,6 +7,7 @@
 }
 
 .Dock {
+  max-width: 100vw;
   position: sticky;
   top: var(--gap-medium);
   margin-block: var(--gap-medium);
